--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
 
-      <title>Stuff I've Made - Enrique Tasa</title>
+      <title>Blog - Enrique Tasa</title>
 
       <link rel="stylesheet" type="text/css" href="styles/style.css">
   <link href="https://fonts.googleapis.com/css?family=Mina|Source+Code+Pro:400,700" rel="stylesheet">
@@ -17,14 +17,14 @@
     <div class="navBar">
         <ul id="navBarList" class="navBarLinks">
           <li><a href="about.html">about</a></li>
-          <li><a style='text-decoration: underline;' href="stuffMade.html">stuff i've made</a></li>
+          <li><a href="stuffMade.html">stuff i've made</a></li>
           <li><a href="index.html">home</a></li>
-          <li><a href="blog.html">blog</a></li>
+          <li><a style='text-decoration: underline;' href="blog.html">blog</a></li>
           <li><a href="contact.html">contact</a></li>
       </ul>
     </div>
 
-    <hr class="separatorBar">
+    <hr class="separatorBar">  
 
     <div class="copyrightInfo"> 
       <p id="copyrightInfo"></p>
