--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Enrique Tasa</title>
+      <meta charset="utf-8">
 
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-<link href="https://fonts.googleapis.com/css?family=Mina|Source+Code+Pro:400,700" rel="stylesheet">
+      <title>Enrique Tasa</title>
+
+      <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Mina|Source+Code+Pro:400,700" rel="stylesheet">
+
+  <script src="script/main.js"></script>
 
   </head>
 
-  <body>
-<div class = "title">
-  <h1>enrique tasa</h1>
-</div>
+  <body onload="startUp()">
 
-<div class="subtitle">
-  <h4>my little corner of the internet.</h4> <!-- FEATURE - this could be regenerated with every page load from a list of options-->
-</div>
+    <div class="navBar">
+        <ul id="navBarList" class="navBarLinks">
+          <li><a href="about.html">about</a></li>
+          <li><a href="stuffMade.html">stuff i've made</a></li>
+          <li><a href="blog.html">blog</a></li>
+          <li><a href="contact.html">contact</a></li>
+      </ul>
+    </div>
 
-<div class="pageBottom">
-    <div class="indexLinks">
-      <p><a href="about.html">about me</a>   <a href="mailingList.html">mailing list</a>   <a href="stuffMade.html">stuff i've made</a>   <a href="contact.html">contact</a></p>
+    <hr class="separatorBar">
+
+    <h1 class="title">enrique tasa</h1>
+
+    <h6 id="subtitleSlogan" class="slogan"></h6>    
+
+    <div class="copyrightInfo"> 
+      <p id="copyrightInfo"></p>
     </div>
-  
-    <div class="copyrightInfo">  
-      <p>made with love in Valencia, Spain by Enrique Tasa. December 2018.</p>
-    </div>
-  </div>
 
   </body>
 </html>
