Added about me section
Have to sort out line spacing and linking, continue building.

--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,9 @@
 
     <div class="navBar">
         <ul id="navBarList" class="navBarLinks">
-          <li><a href="about.html">about</a></li>
-          <li><a href="stuffMade.html">stuff i've made</a></li>
-          <li><a href="index.html">home</a></li>
           <li><a href="blog.html">blog</a></li>
+          <li><a href="index.html">about</a></li>
+          <li><a href="stuffMade.html">stuff i've made</a></li>
           <li><a style='text-decoration: underline;' href="contact.html">contact</a></li>
       </ul>
     </div>
