--- a/index.html
+++ b/index.html
@@ -16,18 +16,34 @@
 
     <div class="navBar">
         <ul id="navBarList" class="navBarLinks">
-          <li><a href="about.html">about</a></li>
-          <li><a href="stuffMade.html">stuff i've made</a></li>
-          <li><a href="blog.html">blog</a></li>
-          <li><a href="contact.html">contact</a></li>
-      </ul>
+          <li id="navBarList"><a href="blog.html">blog</a></li>
+          <li id="navBarList"><a style='text-decoration: underline;' href="index.html">about</a></li>
+          <li id="navBarList"><a href="stuffMade.html">stuff i've made</a></li>
+          <li id="navBarList"><a href="contact.html">contact</a></li>
+        </ul>
     </div>
-
+    
     <hr class="separatorBar">
 
     <h1 class="title">enrique tasa</h1>
 
     <h6 id="subtitleSlogan" class="slogan"></h6>    
+
+    <div id="about">
+      <p class="aboutText">I was born in 1997 in Valencia, Spain. I was lucky to speak both Valenciano and Spanish natively.</p> 
+      <p class="aboutText">There I still have my family and a good bunch of friends.</p>
+      <p class="aboutText">I liked tech, so I moved to the UK and studied Electronic Engineering at University of Manchester.</p>
+      <p class="aboutText">There I perfected my English and learnt a couple programming languages.</p>
+      <p class="aboutText">I was an active alumni of the European Youth Parliament for 5 years. I spoke at conferences and debated European policy and generally had fun. For some time, I was the president of EYP España.</p> 
+      <p class="aboutText">There I learnt public speaking and the importance listening.</p>
+      <p class="aboutText">I worked at Alfatec Sistemas for a year, learning what software engineers do and writing C# code for companies like Mercedes Benz.</p>
+      <p class="aboutText">There I realised loved software and that that's what I wanted to do professionally.</p>
+      <p class="aboutText">I draw and paint and upload my work to instagram.</p> 
+      <p class="aboutText">There I share my visual ideas and express myself.</p>
+      <p class="aboutText">I sometimes have something to say and I film it and upload it to my Youtube channel.</p> 
+      <p class="aboutText">There I exchange ideas and find inspiration.</p>
+      <p class="aboutText">I love to read. You can find some of my favourite books and recommendations here.</p>
+    </div>
 
     <div class="copyrightInfo"> 
       <p id="copyrightInfo"></p>
