--- a/stuffMade.html
+++ b/stuffMade.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
 
-      <title>Stuff I've Made - Enrique Tasa</title>
+      <title>Enrique Tasa</title>
 
       <link rel="stylesheet" type="text/css" href="styles/style.css">
   <link href="https://fonts.googleapis.com/css?family=Mina|Source+Code+Pro:400,700" rel="stylesheet">
@@ -16,14 +16,18 @@
 
     <div class="navBar">
         <ul id="navBarList" class="navBarLinks">
-          <li><a href="blog.html">blog</a></li>
-          <li><a href="index.html">about</a></li>
-          <li><a style='text-decoration: underline;' href="stuffMade.html">stuff i've made</a></li>
-          <li><a href="contact.html">contact</a></li>
-      </ul>
+          <li id="navBarList"><a href="blog.html">blog</a></li>
+          <li id="navBarList"><a href="index.html">about</a></li>
+          <li id="navBarList"><a style='text-decoration: underline;' href="stuffMade.html">stuff i've made</a></li>
+          <li id="navBarList"><a href="contact.html">contact</a></li>
+        </ul>
     </div>
-
+    
     <hr class="separatorBar">
+
+    <h1 class="title">stuff I've made</h1>
+
+    <h6 id="subtitleSlogan" class="slogan">I like to make things</h6>    
 
     <div class="copyrightInfo"> 
       <p id="copyrightInfo"></p>
