--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="navBar">
         <ul id="navBarList" class="navBarLinks">
-          <li id="navBarList"><a href="blog.html">blog</a></li>
+          <li id="navBarList"><a href="http://www.blog.enriquetasa.com">blog</a></li>
           <li id="navBarList"><a style='text-decoration: underline;' href="index.html">about</a></li>
           <li id="navBarList"><a href="stuffMade.html">stuff i've made</a></li>
           <li id="navBarList"><a href="contact.html">contact</a></li>
