--- a/stuffMade.html
+++ b/stuffMade.html
@@ -22,14 +22,14 @@
           <li id="navBarList"><a href="contact.html">contact</a></li>
         </ul>
     </div>
-    
+
     <hr class="separatorBar">
 
-    <h1 class="title">stuff I've made</h1>
+    <h1 class="title">portfolio</h1>
 
-    <h6 id="subtitleSlogan" class="slogan">I like to make things</h6>    
+    <h6 id="subtitleSlogan" class="slogan">I like to make things, here's a showcase of some of them</h6>    
 
-    <div class="copyrightInfo"> 
+    <div class="copyrightInfo">
       <p id="copyrightInfo"></p>
     </div>
 
