Finalised basic site
As far as the basics go, its done.

--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
   <body onload="startUp()">
 
     <div class="navBar">
-        <ul id="navBarList" class="navBarLinks">
-          <li id="navBarList"><a href="blog.html">blog</a></li>
-          <li id="navBarList"><a href="index.html">about</a></li>
-          <li id="navBarList"><a href="stuffMade.html">stuff i've made</a></li>
-          <li id="navBarList"><a style='text-decoration: underline;' href="contact.html">contact</a></li>
+        <ul class="navBarLinks">
+          <li class="navBarLinks"><a href="http://blog.enriquetasa.com" target="_blank">blog</a></li>
+          <li class="navBarLinks"><a href="index.html">about</a></li>
+          <li class="navBarLinks"><a href="stuffMade.html">stuff i've made</a></li>
+          <li class="navBarLinks"><a style='text-decoration: underline;' href="contact.html">contact</a></li>
         </ul>
     </div>
     
@@ -28,6 +28,20 @@
     <h1 class="title">contact</h1>
 
     <h6 id="subtitleSlogan" class="slogan">let's talk</h6>    
+
+    <div class="pageTextBox">
+      <p class="contactWarning">I don't really like social media, I do not like texting. I prefer you contact me via email, or better yet we can have a conversation, be it through the phone or in person. Bear this in mind - if you decide to visit the social media links below to contact me it might take me longer to respond than through the more <em>traditional</em> forms of contact.</p>
+      <p class="contactTitle">email: <div class="contactText">
+          <a href="mailto:tasa@enriquetasa.com">tasa@enriquetasa.com</a> </div></p>
+      <p class="contactTitle">phone: </p>
+      <p class="contactText">send me an email first</p>
+      <br>
+      <br>
+      <p class="contactTitle"><a href="https://www.linkedin.com/in/enrique-tasa/?locale=en_US" target="_blank">linkedIn</a></p>
+      <br>
+      <br>
+      <p class="contactTitle"><a href="https://www.instagram.com/e.tasa/" target="_blank">instagram</a></p>
+    </div>
 
     <div class="copyrightInfo"> 
       <p id="copyrightInfo"></p>
