Fixed copyright footer position bug

--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,11 @@
       <p class="contactTitle"><a href="https://www.instagram.com/e.tasa/" target="_blank">instagram</a></p>
     </div>
 
-    <div class="copyrightInfo"> 
-      <p id="copyrightInfo"></p>
-    </div>
+    <div style="position: relative">    
+      <div class="copyrightInfo">
+        <p id="copyrightInfo"></p>
+      </div>
+  </div>
 
   </body>
 </html>
