--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
       <p class="aboutText"><a href="resources/Tasa CV v5.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
     </div>
 
-    <div class="copyrightInfo"> 
-      <p id="copyrightInfo"></p>
-    </div>
-
+    <div style="position: relative">    
+      <div class="copyrightInfo">
+        <p id="copyrightInfo"></p>
+      </div>
+  </div>
   </body>
 </html>
