--- a/stuffMade.html
+++ b/stuffMade.html
@@ -38,9 +38,11 @@
       <p class="portfolioText">I like making small films and videos. I grew up with youtube and eventually wanted to say somethings and express myself via videos. My <a href="https://www.youtube.com/channel/UC_9qqNs9Qgy8vitE1XB5vCQ/featured " target="_blank">youtube channel</a> is where I put those filsm and videos, some of which are for me to remember a particular moment of my life, some of which I make for the fun of it.</p>
     </div>
 
-    <div class="copyrightInfo">
-      <p id="copyrightInfo"></p>
-    </div>
+    <div style="position: relative">    
+      <div class="copyrightInfo">
+        <p id="copyrightInfo"></p>
+      </div>
+  </div>
 
   </body>
 </html>
