August 2019 update and minor UI changes

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
     <div class="pageTextBox">
       <p class="aboutText">I was born in 1997 in Valencia, Spain. I was lucky to speak both Valenciano and Spanish natively.<br>There I still have my family and a good bunch of friends.</p>
-      <p class="aboutText">I liked tech, so I moved to the UK and studied Electronic Engineering at University of Manchester.<br>There I perfected my English and learnt a little about engineering.</p>
+      <p class="aboutText">I moved to the UK and studied Electronic Engineering at University of Manchester.<br>There I perfected my English and learnt a little about engineering. Eventually I graduated with an upper second class honours degree.</p>
       <p class="aboutText">I worked at <a href="https://alfatecsistemas.es/en/services/machine-vision/" target="_blank">Alfatec Sistemas</a> for a year, writing C# code for companies like Mercedes Benz.<br>There I realised loved <a href="https://github.com/enriquetasa" target="_blank">software</a> and that that's what I wanted to do professionally.</p>
       <p class="aboutText">I was an active alumni of the <a href="https://eyp.org/about/" target="_blank">European Youth Parliament</a> for 5 years.<br>For some time, I was the president of <a href="https://eype.es/es/" target="_blank">EYP España</a>.<br>There I learnt public speaking and the importance listening.</p>
-      <p class="aboutText">I draw and paint and upload my work to <a href="https://www.instagram.com/tasa.art/" target="_blank">instagram</a>.<br>There I share my visual ideas and express myself.</p>
-      <p class="aboutText">I sometimes have something to say and I film it and upload it to my <a href="https://www.youtube.com/channel/UC_9qqNs9Qgy8vitE1XB5vCQ/featured " target="_blank">Youtube channel</a>.<br>There I exchange ideas and find inspiration.</p>
+      <p class="aboutText">After university I started working at <a href="https://www.dai.co.uk/" target="_blank">DAI</a>.<br>As a software engineer I work with code to help companies meet customer demands through a consolidated supply chain.</p>
       <p class="aboutText">I love to read. You can find some of my favourite books and recommendations <a href="https://www.goodreads.com/review/list/33265506-enrique-tasa?shelf=recommends" target="_blank">here.</a></p>
-      <p class="aboutText"><a href="resources/Tasa CV v5.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
+      <p class="aboutText"><a href="resources/Tasa_CV_v6.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
+      <br>
     </div>
 
     <div style="position: relative">    
