--- a/stuffMade.html
+++ b/stuffMade.html
@@ -27,15 +27,16 @@
 
     <h1 class="title">stuff i've made</h1>
 
-    <h6 id="subtitleSlogan" class="slogan">I like to make things, here's a showcase of some of them</h6>    
+    <h6 id="subtitleSlogan" class="slogan">I like to make things, here's a showcase of some of them</h6>   
 
     <div class="pageTextBox">
       <p class="portfolioTitle">Code</p>
-      <p class="portfolioText">I like software. I like using it, thinking about it and most of all making it - planning an architecture and sitting down to make that plan a reality. On my <a href="http://github.com/enriquetasa" target="_blank">GitHub page</a> you'll find information on my work and maybe a couple of public projects (including this website!). Feel free to comment on my code and tell me where you think it is improvable, a big part of my love for software is that I'm always learning.</p>
+      <p class="portfolioText">I like software. I like using it, thinking about it and most of all making it - planning an architecture and sitting down to make that plan a reality. On my <a href="http://github.com/enriquetasa" target="_blank">GitHub page</a> you'll find information on my work and maybe a couple of public projects. Feel free to comment on my code and tell me where you think it is improvable, a big part of my love for software is that I'm always learning.</p>
       <p class="portfolioTitle">Art</p>
-      <p class="portfolioText">I like making stuff, for utility but also for beauty or the fun of it. Some of the stuff I make is artsy - I doodle and draw and paint, sometimes I even make a sculpture. My <a href="http://instagram.com/tasa.art" target="_blank">instagram</a> is where I upload pictures of the stuff I make. Feel free to take a look.</p>
+      <p class="portfolioText">I like making stuff, for utility but also for beauty or the fun of it. Some of the stuff I make is artsy - I draw and paint, sometimes I even make a sculpture. My <a href="http://instagram.com/tasa.art" target="_blank">instagram</a> is where I upload pictures of the stuff I make. Feel free to take a look.</p>
       <p class="portfolioTitle">Youtube</p>
-      <p class="portfolioText">I like making small films and videos. I grew up with youtube and eventually wanted to say somethings and express myself via videos. My <a href="https://www.youtube.com/channel/UC_9qqNs9Qgy8vitE1XB5vCQ/featured " target="_blank">youtube channel</a> is where I put those filsm and videos, some of which are for me to remember a particular moment of my life, some of which I make for the fun of it.</p>
+      <p class="portfolioText">I like making small films and videos. My <a href="https://www.youtube.com/channel/UC_9qqNs9Qgy8vitE1XB5vCQ/featured " target="_blank">youtube channel</a> is where I upload them. Some of them are for me to remember a particular moment of my life, some of them I make for fun.</p>
+      <br>
     </div>
 
     <div style="position: relative">    
