--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <h6 id="subtitleSlogan" class="slogan">let's talk</h6>    
 
     <div class="pageTextBox">
-      <p class="contactWarning">I don't really like social media, I do not like texting. I prefer you contact me via email, or better yet we can have a conversation, be it through the phone or in person. Bear this in mind - if you decide to visit the social media links below to contact me it might take me longer to respond than through the more <em>traditional</em> forms of contact.</p>
+      <p class="contactWarning">I don't really like social media, I do not like texting. I prefer you contact me via email, or better yet we can have a conversation, be it through the phone or in person. Bear in mind if you contact me on social media I might take a while to see and respond.</p>
       <p class="contactTitle">email: <div class="contactText">
           <a href="mailto:tasa@enriquetasa.com">tasa@enriquetasa.com</a> </div></p>
       <p class="contactTitle">phone: </p>
@@ -41,6 +41,8 @@
       <br>
       <br>
       <p class="contactTitle"><a href="https://www.instagram.com/e.tasa/" target="_blank">instagram</a></p>
+      <br>
+      <br>
       <br>
       <br>
       <br>
