Spelling check, some minor content changes

--- a/public/contact.html
+++ b/public/contact.html
@@ -30,7 +30,7 @@
     <h6 id="subtitleSlogan" class="slogan">let's talk</h6>    
 
     <div class="pageTextBox">
-      <p class="contactWarning">I don't really like social media, I do not like texting. I prefer you contact me via email, or better yet we can have a conversation, be it through the phone or in person. Bear in mind if you contact me on social media I might take a while to see and respond.</p>
+      <p class="contactWarning">I don't really like social media, I don't enjoy texting. I prefer you contact me via email, or better yet we can have a conversation, be it through the phone or in person. Bear in mind if you contact me on social media I might take a while to see and respond.</p>
       <p class="contactTitle">email: <div class="contactText">
           <a href="mailto:tasa@enriquetasa.com">tasa@enriquetasa.com</a> </div></p>
       <p class="contactTitle">phone: </p>
