--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
       <p class="aboutText">I moved to the UK and studied Electronic Engineering at the University of Manchester.<br>There I perfected my English and learnt a little about engineering. Eventually I graduated with an upper second class honours degree.</p>
       <p class="aboutText">I worked at <a href="https://alfatecsistemas.es/en/services/machine-vision/" target="_blank">Alfatec Sistemas</a> for a year, writing C# code for companies like Mercedes Benz.<br>There I realised I loved <a href="https://github.com/enriquetasa" target="_blank">software</a> and decided that's what I wanted to do professionally.</p>
       <p class="aboutText">I was an active alumni of the <a href="https://eyp.org/about/" target="_blank">European Youth Parliament</a> for 5 years.<br>For some time, I was the president of <a href="https://eype.es/es/" target="_blank">EYP España</a>.<br>There I practiced my public speaking and learnt the importance listening.</p>
-      <p class="aboutText">After university I started working at <a href="https://www.dai.co.uk/" target="_blank">DAI</a>.<br>As a software engineer I work with code to help companies meet customer demands through a consolidated supply chain.</p>
+      <p class="aboutText">After university I started working at <a href="https://www.dai.co.uk/" target="_blank">DAI</a>.<br>I specialise in Continuous Integration and internal tooling and mostly use Python.</p>
       <p class="aboutText">I love to read. You can find some of my favourite books and recommendations <a href="https://www.goodreads.com/review/list/33265506-enrique-tasa?shelf=recommends" target="_blank">here.</a></p>
-      <p class="aboutText"><a href="resources/Tasa_CV_v6.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
+      <p class="aboutText"><a href="resources/Tasa_CV_v8.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
       <br>
     </div>
 
