Wrong path fixed

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <p class="aboutText">I was an active alumni of the <a href="https://eyp.org/about/" target="_blank">European Youth Parliament</a> for 5 years.<br>For some time, I was the president of <a href="https://eype.es/es/" target="_blank">EYP España</a>.<br>There I practiced my public speaking and learnt the importance listening.</p>
       <p class="aboutText">After university I started working at <a href="https://www.dai.co.uk/" target="_blank">DAI</a>.<br>I specialise in Continuous Integration and internal tooling and mostly use Python.</p>
       <p class="aboutText">I love to read. You can find some of my favourite books and recommendations <a href="https://www.goodreads.com/review/list/33265506-enrique-tasa?shelf=recommends" target="_blank">here.</a></p>
-      <p class="aboutText"><a href="resources/Tasa_CV_v8.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
+      <p class="aboutText"><a href="resources/Tasa CV v8.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
       <br>
     </div>
 
