Website update Jun 2020

--- a/public/stuffMade.html
+++ b/public/stuffMade.html
@@ -26,23 +26,24 @@
     <hr class="separatorBar">
 
     <h1 class="title">stuff i've made</h1>
-
-    <h6 id="subtitleSlogan" class="slogan">I like to make things, here's a showcase of some of them</h6>   
+    <br>
+    <h6 id="subtitleSlogan" class="slogan">I like to make things, here's a showcase of some of them</h6>
 
     <div class="pageTextBox">
-      <p class="portfolioTitle">Code</p>
-      <p class="portfolioText">I like software. I like using it, thinking about it and most of all making it - planning an architecture and sitting down to make that plan a reality. On my <a href="http://github.com/enriquetasa" target="_blank">GitHub page</a> you'll find information on my work and maybe a couple of public projects. Feel free to comment on my code and tell me where you think it is improvable, a big part of my love for software is that I'm always learning.</p>
-      <p class="portfolioTitle">Art</p>
-      <p class="portfolioText">I like making stuff, for utility but also for beauty or the fun of it. Some of the stuff I make is artsy - I draw and paint, sometimes I even make a sculpture. My <a href="http://instagram.com/tasa.art" target="_blank">instagram</a> is where I upload pictures of the stuff I make. Feel free to take a look.</p>
+      <p class="portfolioTitle">code</p>
+      <p class="aboutText">If you want to see some of my code, the best place to look is my <a href="http://github.com/enriquetasa" target="_blank">GitHub page</a>.<br>Feel free to comment on my code and tell me where you think it is improvable, a big part of my love for software is that I'm always learning and I'm keen on hearing other people's thoughts out.</p>
+      <br>
+      <p class="portfolioTitle">drawing</p>
+      <p class="aboutText">Sometimes I draw. Some of those times I put what I draw up on instagram. If you're interested in that, you can check out my account <a href="http://instagram.com/elgirufo" target="_blank">here.</a></p>
       <br>
       <br>
     </div>
 
-    <div style="position: relative">    
+    <div>    
       <div class="copyrightInfo">
         <p id="copyrightInfo"></p>
       </div>
-  </div>
+    </div>
 
   </body>
 </html>
