--- a/public/contact.html
+++ b/public/contact.html
@@ -49,7 +49,7 @@
       <br>
     </div>
 
-    <div style="position: relative">    
+    <div>    
       <div class="copyrightInfo">
         <p id="copyrightInfo"></p>
       </div>
