--- a/public/index.html
+++ b/public/index.html
@@ -27,20 +27,20 @@
 
     <h1 class="title">enrique tasa</h1>
 
-    <h6 class="slogan">- la vida puede ser maravillosa -</h6>    
+    <h6 class="slogan">- software engineer -</h6>    
 
     <div class="pageTextBox">
-      <p class="aboutText">I was born in 1997 in Valencia, Spain. I was lucky to speak both Valenciano and Spanish natively.<br>There I still have my family and a good bunch of friends.</p>
-      <p class="aboutText">I moved to the UK and studied Electronic Engineering at the University of Manchester.<br>There I perfected my English and learnt a little about engineering. Eventually I graduated with an upper second class honours degree.</p>
-      <p class="aboutText">I worked at <a href="https://alfatecsistemas.es/en/services/machine-vision/" target="_blank">Alfatec Sistemas</a> for a year, writing C# code for companies like Mercedes Benz.<br>There I realised I loved <a href="https://github.com/enriquetasa" target="_blank">software</a> and decided that's what I wanted to do professionally.</p>
-      <p class="aboutText">I was an active alumni of the <a href="https://eyp.org/about/" target="_blank">European Youth Parliament</a> for 5 years.<br>For some time, I was the president of <a href="https://eype.es/es/" target="_blank">EYP España</a>.<br>There I practiced my public speaking and learnt the importance listening.</p>
-      <p class="aboutText">After university I started working at <a href="https://www.dai.co.uk/" target="_blank">DAI</a>.<br>I specialise in Continuous Integration and internal tooling and mostly use Python.</p>
+      <p class="aboutText">I was born in 1997 in Valencia, Spain. I was lucky to speak both Valenciano and Spanish natively.<br> I learnt English at school and now speak it at a bilingual level.</p>
+      <p class="aboutText">I moved to the UK and studied Electronic Engineering at the University of Manchester.<br> I met some great people, had a lot of fun - eventually I graduated with an upper second class honours degree.</p>
+      <p class="aboutText">I was an active alumni of the <a href="https://eyp.org/about/" target="_blank">European Youth Parliament</a> for 5 years.<br>For some time, I was the president of <a href="https://eypespana.wixsite.com/eypespana-en" target="_blank">EYP España</a>.<br>EYP taught me public speaking and the importance listening.</p>
+      <p class="aboutText">I did an industrial placement at <a href="https://alfatecsistemas.es/en/services/machine-vision/" target="_blank">Alfatec Sistemas</a> for a year, writing C# code for companies like Mercedes Benz.<br>There I realised I loved <a href="https://github.com/enriquetasa" target="_blank">software</a> and decided that's what I wanted to do professionally.</p>
+      <p class="aboutText">After university I started working at <a href="https://www.dai.co.uk/" target="_blank">DAI</a>.<br>I'm a member of the core technology team and spend a lot of my time writing Python apps for internal tooling and using continuous integration to improve workflows within the engineering team. Ocassionally, I dabble in C to improve the efficiency of core components.</p>
       <p class="aboutText">I love to read. You can find some of my favourite books and recommendations <a href="https://www.goodreads.com/review/list/33265506-enrique-tasa?shelf=recommends" target="_blank">here.</a></p>
-      <p class="aboutText"><a href="resources/Tasa CV v8.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
+      <p class="aboutText"><a href="resources/enrique_tasa_cv.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
       <br>
     </div>
 
-    <div style="position: relative">    
+    <div>    
       <div class="copyrightInfo">
         <p id="copyrightInfo"></p>
       </div>
