Added show me something and made small changes

--- a/public/contact.html
+++ b/public/contact.html
@@ -20,6 +20,7 @@
           <li class="navBarLinks"><a href="index.html">about</a></li>
           <li class="navBarLinks"><a href="stuffMade.html">stuff i've made</a></li>
           <li class="navBarLinks"><a style='text-decoration: underline;' href="contact.html">contact</a></li>
+          <li class="navBarLinks"><a onclick="showMeSomething()" href="#">show me something</a></li>
         </ul>
     </div>
     
