--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
           <li class="navBarLinks"><a style='text-decoration: underline;' href="index.html">about</a></li>
           <li class="navBarLinks"><a href="stuffMade.html">stuff i've made</a></li>
           <li class="navBarLinks"><a href="contact.html">contact</a></li>
+          <li class="navBarLinks"><a onclick="showMeSomething()" href="#">show me something</a></li>
         </ul>
     </div>
     
@@ -35,7 +36,7 @@
       <p class="aboutText">I was an active alumni of the <a href="https://eyp.org/about/" target="_blank">European Youth Parliament</a> for 5 years.<br>For some time, I was the president of <a href="https://eypespana.wixsite.com/eypespana-en" target="_blank">EYP España</a>.<br>EYP taught me public speaking and the importance listening.</p>
       <p class="aboutText">I did an industrial placement at <a href="https://alfatecsistemas.es/en/services/machine-vision/" target="_blank">Alfatec Sistemas</a> for a year, writing C# code for companies like Mercedes Benz.<br>There I realised I loved <a href="https://github.com/enriquetasa" target="_blank">software</a> and decided that's what I wanted to do professionally.</p>
       <p class="aboutText">After university I worked at <a href="https://www.dai.co.uk/" target="_blank">DAI</a> for some time.<br> I was a member of the core tech team and mostly worked on implementing the infrastructure needed to modernise development practices.</p>
-      <p class="aboutText">Currently, I work for <a href="https://ihateironing.com" target="_blank"> ihateironing.com </a>, where I'm helping them advance their engineering vision forward.</p>
+      <p class="aboutText">Currently, I work for <a href="https://ihateironing.com" target="_blank"> ihateironing.com</a>, where I'm helping them advance their engineering vision forward.</p>
       <p class="aboutText">I love to read. You can find some of my favourite books and recommendations <a href="https://www.goodreads.com/review/list/33265506-enrique-tasa?shelf=recommends" target="_blank">here.</a></p>
       <p class="aboutText"><a href="resources/enrique_tasa_cv.pdf" target="_blank">Here</a> is a more detailed résumé if you're interested in that.</p>
       <br>
